// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`screens/CreateGroup/GroupCreateStatus renders correctly when failed props 1`] = `
<Snackbar
  SnackbarContentProps={
    Object {
      "aria-describedby": "message-id",
    }
  }
  action={
    Array [
      <IconButton
        aria-label="Close"
        color="inherit"
        onClick={[MockFunction]}
      >
        <CloseIcon />
      </IconButton>,
    ]
  }
  anchorOrigin={
    Object {
      "horizontal": "left",
      "vertical": "bottom",
    }
  }
  autoHideDuration={60000}
  message={
    <span
      id="message-id"
    >
      Nosé
    </span>
  }
  onClose={[MockFunction]}
  open={true}
/>
`;

exports[`screens/CreateGroup/GroupCreateStatus renders correctly when success 1`] = `
<Snackbar
  SnackbarContentProps={
    Object {
      "aria-describedby": "message-id",
    }
  }
  action={
    Array [
      <IconButton
        aria-label="Close"
        color="inherit"
        onClick={[MockFunction]}
      >
        <CloseIcon />
      </IconButton>,
    ]
  }
  anchorOrigin={
    Object {
      "horizontal": "left",
      "vertical": "bottom",
    }
  }
  autoHideDuration={60000}
  message={
    <span
      id="message-id"
    >
      <React.Fragment>
        <React.Fragment>
          Payer 
          € sur la
           
          <a
            className="group-create-link"
            href="https://www.paypal.com/pools/c/84gsKV8QG8"
            target="_blank"
            title="Site cagnotte"
          >
            cagnotte
          </a>
          pour valider votre inscription !
           
        </React.Fragment>
        Tribu 
         créée avec la clé 
        <b />

      </React.Fragment>
    </span>
  }
  onClose={[MockFunction]}
  open={true}
/>
`;

exports[`screens/CreateGroup/GroupCreateStatus renders correctly without props 1`] = `
<Snackbar
  SnackbarContentProps={
    Object {
      "aria-describedby": "message-id",
    }
  }
  action={
    Array [
      <IconButton
        aria-label="Close"
        color="inherit"
        onClick={[MockFunction]}
      >
        <CloseIcon />
      </IconButton>,
    ]
  }
  anchorOrigin={
    Object {
      "horizontal": "left",
      "vertical": "bottom",
    }
  }
  autoHideDuration={60000}
  message={
    <span
      id="message-id"
    >
      <React.Fragment>
        <React.Fragment>
          Payer 
          € sur la
           
          <a
            className="group-create-link"
            href="https://www.paypal.com/pools/c/84gsKV8QG8"
            target="_blank"
            title="Site cagnotte"
          >
            cagnotte
          </a>
          pour valider votre inscription !
           
        </React.Fragment>
        Tribu 
         créée avec la clé 
        <b />
        
      </React.Fragment>
    </span>
  }
  onClose={[MockFunction]}
  open={false}
/>
`;
